# house_prices

./: .gitignore  README.md  pyproject.toml
config/: config.json
report/: data_drift.csv  missing_data.csv
src/drift/: DataDrift.py
src/drift/metrics/: population_stability_index.py
src/validations/: DataValidation.py  DataValidationInterface.py
