[tool.poetry]
name = "house-prices"
version = "0.1.0"
description = "House prices script to identify changes in dataset and run validations"
authors = ["Kenji Tsuchiya <kenjitsuchiya1@gmail.com>"]
readme = "README.md"
packages = [{include = "house_prices"}]

[tool.poetry.dependencies]
python = "3.10.7"
pandas = "^1.5.0"
numpy = "^1.23.3"
scipy = "^1.9.2"
black = "^22.10.0"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
